Radial Visualization config

--- a/player.html
+++ b/player.html
@@ -5,7 +5,16 @@
   <title>Brandt's Playlists</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/player.css?v=20251005m">  
+  <link rel="stylesheet" href="/css/player.css?v=20251005j">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8VQEFEV1BD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-8VQEFEV1BD');
+  </script>    
 </head>
 <body>
   <!-- Blocking overlay (visible by default) -->
@@ -81,6 +90,6 @@
   </main>
 
   <!-- Script -->
-  <script src="/js/player.js?v=20251005o"></script> 
+  <script src="/js/player.js?v=20251005j"></script> 
 </body>
 </html>
