--- a/player.html
+++ b/player.html
@@ -5,7 +5,7 @@
   <title>Brandt's Playlists</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Styles -->
-  <link rel="stylesheet" href="/css/player.css?v=20251005j">
+  <link rel="stylesheet" href="/css/player.css?v=20251008a">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-8VQEFEV1BD"></script>
   <script>
@@ -90,6 +90,6 @@
   </main>
 
   <!-- Script -->
-  <script src="/js/player.js?v=20251005j"></script> 
+  <script src="/js/player.js?v=20251008c"></script> 
 </body>
 </html>
